[package]
name = "pr-bot"
version = "0.2.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

# --- scaffold ---
[profile.dev]
overflow-checks = true
lto = "fat"

[profile.release]
overflow-checks = true
lto = "fat"
opt-level = 3
strip = "debuginfo"
incremental = true

[lints.clippy]
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
suspicious = "warn"
